# release-notes-generator

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  pyrightconfig.json
release_notes/: README.md  generator.py  logger_config.py  models.py  parser.py
