[tool.poetry]
name = "release_notes"
version = "0.1.0"
description = "create releae_notes markdown"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
# packages = [{include = "release_notes"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.8"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
